--- a/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/en.json
+++ b/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/en.json
@@ -5,6 +5,12 @@
     "Welcome": "Welcome",
     "LongWelcomeMessage": "Welcome to the application. This is a startup project based on the ABP framework. For more information, visit abp.io.",
     "Exception:00001": "The {code} code you entered has been used before.",
-    "Exception:00002": "The card you are trying to delete has transactions that have been processed. The card cannot be deleted."
+    "Exception:00002": "The card you are trying to delete has transactions that have been processed. The card cannot be deleted.",
+    "Enum:BankAccountType:1": "Demand Deposit Account",
+    "Enum:BankAccountType:2": "Time Deposit Account",
+    "Enum:BankAccountType:3": "Credit Account",
+    "Enum:BankAccountType:4": "Pos Blocked Account",
+    "Enum:BankAccountType:5": "Fund Account",
+    "Enum:BankAccountType:6": "Investment Account"
   }
 }
