--- a/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
+++ b/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
@@ -34,6 +34,7 @@
     "AccountId": "Hesap Numarası",
     "Iban": "Iban",
     "Department": "Şube",
-    "Description": "Açıklama"
+    "Description": "Açıklama",
+    "Bank": "Banka"
   }
 }
