Departman ve currnt validatorleri hazırlandı.

--- a/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/en-GB.json
+++ b/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/en-GB.json
@@ -35,6 +35,8 @@
     "Iban": "Iban",
     "Department": "Department",
     "Description": "Description",
-    "Bank": "Bank"
+    "Bank": "Bank",
+    "TaxOffice": "Tax Office",
+    "TaxNumber": "Tax Number"
   }
 }
