Cari validatiorlerde düzenleme yapıldı.

--- a/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/en-GB.json
+++ b/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/en-GB.json
@@ -37,6 +37,8 @@
     "Description": "Description",
     "Bank": "Bank",
     "TaxOffice": "Tax Office",
-    "TaxNumber": "Tax Number"
+    "TaxNumber": "Tax Number",
+    "Telephone": "Telephone",
+    "Address": "Address"
   }
 }
