--- a/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
+++ b/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
@@ -37,6 +37,8 @@
     "Description": "Açıklama",
     "Bank": "Banka",
     "TaxOffice": "Vergi Dairesi",
-    "TaxNumber": "Vergi Numarası"
+    "TaxNumber": "Vergi Numarası",
+    "Telephone": "Telefon",
+    "Address": "Adres"
   }
 }
