--- a/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
+++ b/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
@@ -8,6 +8,7 @@
     "Exception:00002": "Silmeye çalıştığınız kartın işlem görmüş hareketleri var. Kart silinemez.",
     "Exception:00003": "{0} alanı zorunludur.",
     "Exception:00004": "{0} alanı maksimum {1} karakter uzunluğunda olabilir.",
+    "Exception:00005": "{0} alanı değeri {1} eşit veya {2} büyük olmalıdır.",
     "Enum:BankAccountType:1": "Vadesiz Mevduat Hesabı",
     "Enum:BankAccountType:2": "Vadeli Mevduat Hesabı",
     "Enum:BankAccountType:3": "Kredi Hesabı",
@@ -39,6 +40,11 @@
     "TaxOffice": "Vergi Dairesi",
     "TaxNumber": "Vergi Numarası",
     "Telephone": "Telefon",
-    "Address": "Adres"
+    "Address": "Adres",
+    "ValueAddedTaxRate": "Kdv Oranı",
+    "ToZero": "Sıfıra",
+    "ThanZero": "Sıfırdan",
+    "UnitPrice": "Birim Fiyat",
+    "Unit": "Birim"
   }
 }
