--- a/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
+++ b/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
@@ -45,6 +45,8 @@
     "ToZero": "Sıfıra",
     "ThanZero": "Sıfırdan",
     "UnitPrice": "Birim Fiyat",
-    "Unit": "Birim"
+    "Unit": "Birim",
+    "SpecialCodeType": "Özel Kod Tipi",
+    "CardType": "Kart Tipi"
   }
 }
