--- a/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
+++ b/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
@@ -9,6 +9,7 @@
     "Exception:00003": "{0} alanı zorunludur.",
     "Exception:00004": "{0} alanı maksimum {1} karakter uzunluğunda olabilir.",
     "Exception:00005": "{0} alanı değeri {1} eşit veya {2} büyük olmalıdır.",
+    "Exception:00006": "Girdiğiniz veriler kontrol edildiğinde {0} alanı boş olmalıdır.",
     "Enum:BankAccountType:1": "Vadesiz Mevduat Hesabı",
     "Enum:BankAccountType:2": "Vadeli Mevduat Hesabı",
     "Enum:BankAccountType:3": "Kredi Hesabı",
@@ -67,6 +68,28 @@
     "DiscountAmount": "İskonto Toplam",
     "TaxRate": "Kdv Oranı",
     "TaxTotal": "Kdv Toplam",
-    "NetTotal": "Net Toplam"
+    "NetTotal": "Net Toplam",
+    "Date": "Tarih",
+    "ReceiptType": "Makbuz Tipi",
+    "ReceiptNumber": "Makbuz Numarası",
+    "Safe": "Kasa",
+    "BankAccount": "Banka Hesabı",
+    "ChequeTotal": "Öek Toplam",
+    "PostTotal": "Pos Toplam",
+    "CashTotal": "Nakit Toplam",
+    "BankTotal": "Banka Toplam",
+    "Id": "Id",
+    "PaymentType": "Ödeme Tipi",
+    "TrackingNumber": "Takip Numarası",
+    "ChequeBank": "Çek Banka",
+    "ChequeBankDepartment": "Çek Banka Şubesi",
+    "ChequeAccountNumber": "Çek Banka Hesap Numarası",
+    "DocumentNo": "Belge No",
+    "ExpiryDate": "Vade Tarihi",
+    "PrincipalDebtor": "Asıl Borçlu",
+    "Endorser": "Ciranta",
+    "Amount": "Tutar",
+    "DocumentStatu": "Belge Statusu",
+    "BillTotal": "Senet Toplam"
   }
 }
