--- a/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/en.json
+++ b/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/en.json
@@ -9,6 +9,7 @@
     "Exception:00003": "The {0} field is required.",
     "Exception:00004": "The {0} field can be up to {1} characters long.",
     "Exception:00005": "The {0} field value must be greater than {1} or {2}.",
+    "Exception:00006": "The {0} field should be blank when the data you entered is checked.",
     "Enum:BankAccountType:1": "Demand Deposit Account",
     "Enum:BankAccountType:2": "Time Deposit Account",
     "Enum:BankAccountType:3": "Credit Account",
@@ -68,6 +69,27 @@
     "TaxRate": "Tax Rate",
     "TaxTotal": "Tax Total",
     "NetTotal": "Net Total",
-    "Date": "Date"
+    "Date": "Date",
+    "ReceiptType": "Receipt Type",
+    "ReceiptNumber": "Receipt Number",
+    "Safe": "Safe",
+    "BankAccount": "Bank Account",
+    "ChequeTotal": "Cheque Total",
+    "PostTotal": "Post Total",
+    "CashTotal": "Cash Total",
+    "BankTotal": "Bank Total",
+    "Id": "Id",
+    "PaymentType": "Payment Type",
+    "TrackingNumber": "Tracking Number",
+    "ChequeBank": "Cheque Bank",
+    "ChequeBankDepartment": "Cheque Bank Department",
+    "ChequeAccountNumber": "Cheque Account Number",
+    "DocumentNo": "Document No",
+    "ExpiryDate": "Expiry Date",
+    "PrincipalDebtor": "Principal Debtor",
+    "Endorser": "Endorser",
+    "Amount": "Amount",
+    "DocumentStatu": "Document Statu",
+    "BillTotal": "Bill Total"
   }
 }
