Menü Localize işlemleri yapıldı

--- a/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/en-GB.json
+++ b/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/en-GB.json
@@ -103,6 +103,40 @@
     "ShowFilterRow": "Show Filter Row",
     "Print": "Print",
     "ActiveCards": "Active Cards",
-    "PassiveCards": "Passive Cards"
+    "PassiveCards": "Passive Cards",
+    "Pre-Accounting": "Pre-Accounting",
+    "Home": "Home",
+    "Cards": "Cards",
+    "UnitCards": "Unit Cards",
+    "BankCards": "Bank Cards",
+    "BankAccountCards": "Bank Account Cards",
+    "CustomerCards": "Customer Cards",
+    "CashCards": "Cash Cards",
+    "WarehouseCards": "Warehouse Cards",
+    "StockCards": "Stock Cards",
+    "ServiceCards": "Service Cards",
+    "ExpenseCards": "Expense Cards",
+    "BranchCards": "Branch Cards",
+    "PeriodCards": "Period Cards",
+    "Invoices": "Invoices",
+    "PurchaseInvoices": "Purchase Invoices",
+    "SalesInvoices": "Sales Invoices",
+    "Receipts": "Receipts",
+    "CollectionReceipts": "Collection Receipts",
+    "PaymentReceipts": "Payment Receipts",
+    "CashTransactionReceipts": "Cash Transaction Receipts",
+    "BankTransactionReceipts": "Bank Transaction Receipts",
+    "MeansOfPayment": "Means Of Payment",
+    "ReceiveMeansOfPayment": "Receive Means Of Payment",
+    "OurOwnMeansOfPayment": "Our Own Means Of Payment",
+    "Parameters": "Parameters",
+    "CompParameters": "Company Parameters",
+    "Administration": "Administration",
+    "TenantManagement": "Tenant Management",
+    "Tenants": "Tenants",
+    "IdentityManagement": "Identity Management",
+    "Roles": "Roles",
+    "Users": "Users",
+    "Settings": "Settings"
   }
 }
