--- a/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
+++ b/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
@@ -103,6 +103,40 @@
     "ShowFilterRow": "Filtreleme Panelini Göster",
     "Print": "Yazdır",
     "ActiveCards": "Aktif Kartlar",
-    "PassiveCards": "Pasif Kartlar"
+    "PassiveCards": "Pasif Kartlar",
+    "Pre-Accounting": "Ön Muhasebe",
+    "Home": "Ana Sayfa",
+    "Cards": "Kartlar",
+    "UnitCards": "Birim Kartları",
+    "BankCards": "Banka Kartları",
+    "BankAccountCards": "Banka Hesap Kartları",
+    "CustomerCards": "Cari Kartlar",
+    "CashCards": "Kasa Kartları",
+    "WarehouseCards": "Depo Kartları",
+    "StockCards": "Stok Kartları",
+    "ServiceCards": "Hizmet Kartları",
+    "ExpenseCards": "Masraf Kartları",
+    "BranchCards": "Şube Kartları",
+    "PeriodCards": "Dönem Kartları",
+    "Invoices": "Faturalar",
+    "PurchaseInvoices": "Alış Faturaları",
+    "SalesInvoices": "Satış Faturaları",
+    "Receipts": "Makbuzlar",
+    "CollectionReceipts": "Tahsilat Makbuzları",
+    "PaymentReceipts": "Ödeme Makbuzları",
+    "CashTransactionReceipts": "Kasa İşlem Makbuzları",
+    "BankTransactionReceipts": "Banka İşlem Makbuzları",
+    "MeansOfPayment": "Ödeme Belgeleri",
+    "ReceiveMeansOfPayment": "Alınan Ödeme Belgeleri",
+    "OurOwnMeansOfPayment": "Kendi Ödeme Belgelerimiz",
+    "Parameters": "Parametreler",
+    "CompParameters": "Firma Parametreleri",
+    "Administration": "Yönetim",
+    "TenantManagement": "Müşteri Yönetimi",
+    "Tenants": "Müşteriler",
+    "IdentityManagement": "Kimlik Yönetimi",
+    "Roles": "Roller",
+    "Users": "Kullanıcılar",
+    "Settings": "Ayarlar"
   }
 }
