--- a/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
+++ b/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
@@ -137,6 +137,10 @@
     "IdentityManagement": "Kimlik Yönetimi",
     "Roles": "Roller",
     "Users": "Kullanıcılar",
-    "Settings": "Ayarlar"
+    "Settings": "Ayarlar",
+    "SpecialCodeOneName": "Özel Kod-1",
+    "SpecialCodeTwoName": "Özel Kod-2",
+    "PleaseWait": "Lütfen Bekleyin",
+    "Loading": "Yükleniyor"
   }
 }
