--- a/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
+++ b/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
@@ -160,6 +160,7 @@
     "EnterDescription": "Açıklama Girin",
     "CustomCodeCards": "Özel Kod Kartları",
     "Select": "Seç",
-    "CustomCard": "Özel Kod Kartı"
+    "CustomCard": "Özel Kod Kartı",
+    "SpecialCodeCards": "Özel Kod Kartları"
   }
 }
