--- a/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/en.json
+++ b/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/en.json
@@ -160,6 +160,7 @@
     "EnterDescription": "Enter Description",
     "CustomCodeCards": "Custom Code Cards",
     "Select": "Select",
-    "CustomCard": "Custom Card"
+    "CustomCard": "Custom Card",
+    "SpecialCodeCards": "Special Code Cards"
   }
 }
