Özel kod edit page çalışma yapıldı.

--- a/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/en-GB.json
+++ b/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/en-GB.json
@@ -161,6 +161,7 @@
     "CustomCodeCards": "Custom Code Cards",
     "Select": "Select",
     "CustomCard": "Custom Card",
-    "SpecialCodeCards": "Special Code Cards"
+    "SpecialCodeCards": "Special Code Cards",
+    "SpecialCodeCard": "Special Code Card"
   }
 }
