--- a/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
+++ b/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
@@ -161,6 +161,7 @@
     "CustomCodeCards": "Özel Kod Kartları",
     "Select": "Seç",
     "CustomCard": "Özel Kod Kartı",
-    "SpecialCodeCards": "Özel Kod Kartları"
+    "SpecialCodeCards": "Özel Kod Kartları",
+    "SpecialCodeCard": "Özel Kod Kart"
   }
 }
