Banka departman list ve edit pageleri yapıldı.

--- a/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
+++ b/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
@@ -162,6 +162,9 @@
     "Select": "Seç",
     "CustomCard": "Özel Kod Kartı",
     "SpecialCodeCards": "Özel Kod Kartları",
-    "SpecialCodeCard": "Özel Kod Kart"
+    "SpecialCodeCard": "Özel Kod Kart",
+    "BankDepartments": "Banka Şubeleri",
+    "BankDepartmentCard": "Banka Şube Kartı",
+    "BankDepartmentCards": "Banka Şube Kartları"
   }
 }
