--- a/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/en.json
+++ b/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/en.json
@@ -162,6 +162,9 @@
     "Select": "Select",
     "CustomCard": "Custom Card",
     "SpecialCodeCards": "Special Code Cards",
-    "SpecialCodeCard": "Special Code Card"
+    "SpecialCodeCard": "Special Code Card",
+    "BankDepartments": "Bank Departments",
+    "BankDepartmentCard": "Bank Department Card",
+    "BankDepartmentCards": "Bank Department Cards"
   }
 }
