--- a/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
+++ b/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
@@ -165,6 +165,7 @@
     "SpecialCodeCard": "Özel Kod Kart",
     "BankDepartments": "Banka Şubeleri",
     "BankDepartmentCard": "Banka Şube Kartı",
-    "BankDepartmentCards": "Banka Şube Kartları"
+    "BankDepartmentCards": "Banka Şube Kartları",
+    "DepartmentCards": "Şube Kartları"
   }
 }
