--- a/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/en.json
+++ b/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/en.json
@@ -165,6 +165,7 @@
     "SpecialCodeCard": "Special Code Card",
     "BankDepartments": "Bank Departments",
     "BankDepartmentCard": "Bank Department Card",
-    "BankDepartmentCards": "Bank Department Cards"
+    "BankDepartmentCards": "Bank Department Cards",
+    "DepartmentCards": "Department Cards"
   }
 }
