--- a/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
+++ b/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
@@ -187,6 +187,7 @@
     "Entered": "Giren",
     "Out": "Çıkan",
     "Available": "Mevcut",
-    "StoreCard": "Depo Kartı"
+    "StoreCard": "Depo Kartı",
+    "PeriodCard": "Dönem Kart"
   }
 }
