--- a/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/en.json
+++ b/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/en.json
@@ -187,6 +187,7 @@
     "Entered": "Entered",
     "Out": "Out",
     "Available": "Available",
-    "StoreCard": "Store Card"
+    "StoreCard": "Store Card",
+    "PeriodCard": "Period Card"
   }
 }
