--- a/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/en-GB.json
+++ b/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/en-GB.json
@@ -188,6 +188,9 @@
     "Out": "Out",
     "Available": "Available",
     "StoreCard": "Store Card",
-    "PeriodCard": "Period Card"
+    "PeriodCard": "Period Card",
+    "ServiceCard": "Service Card",
+    "Barcode": "Barcode",
+    "EnterBarcode": "Enter Barcode"
   }
 }
