--- a/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
+++ b/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
@@ -191,6 +191,8 @@
     "PeriodCard": "Dönem Kart",
     "ServiceCard": "Hizmet Kartı",
     "Barcode": "Barkod",
-    "EnterBarcode": "Barkod Girin"
+    "EnterBarcode": "Barkod Girin",
+    "SafeCard": "Kasa Kartı",
+    "SafeCards": "Kasa kartları"
   }
 }
