--- a/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/en.json
+++ b/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/en.json
@@ -191,6 +191,8 @@
     "PeriodCard": "Period Card",
     "ServiceCard": "Service Card",
     "Barcode": "Barcode",
-    "EnterBarcode": "Enter Barcode"
+    "EnterBarcode": "Enter Barcode",
+    "SafeCard": "Safe Card",
+    "SafeCards": "Safe Cards"
   }
 }
