--- a/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/en-GB.json
+++ b/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/en-GB.json
@@ -193,6 +193,7 @@
     "Barcode": "Barcode",
     "EnterBarcode": "Enter Barcode",
     "SafeCard": "Safe Card",
-    "SafeCards": "Safe Cards"
+    "SafeCards": "Safe Cards",
+    "ExpenseCard": "Expense Card"
   }
 }
