--- a/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
+++ b/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
@@ -196,6 +196,7 @@
     "SafeCards": "Kasa kartları",
     "ExpenseCard": "Masraf Kartı",
     "Balance": "Kalan",
-    "StockCard": "Stok Kartı"
+    "StockCard": "Stok Kartı",
+    "DepartmentCard": "Şube Kartı"
   }
 }
