--- a/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/en-GB.json
+++ b/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/en-GB.json
@@ -197,6 +197,8 @@
     "ExpenseCard": "Expense Card",
     "Balance": "Balance",
     "StockCard": "Stock Card",
-    "DepartmentCard": "Department Card"
+    "DepartmentCard": "Department Card",
+    "TermCards": "Term Cards",
+    "Term": "Term"
   }
 }
