--- a/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
+++ b/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
@@ -197,6 +197,8 @@
     "ExpenseCard": "Masraf Kartı",
     "Balance": "Kalan",
     "StockCard": "Stok Kartı",
-    "DepartmentCard": "Şube Kartı"
+    "DepartmentCard": "Şube Kartı",
+    "TermCards": "Dönem Kartları",
+    "Term": "Dönem"
   }
 }
