--- a/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
+++ b/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
@@ -208,6 +208,7 @@
     "EnterInvoiceNumber": "Fatura Numarası Girin",
     "EnterDate": "Fatura Tarihi Girin",
     "Continue": "Devam",
-    "BranchAndPeriodSelect": "Şube ve Dönem Seçimi"
+    "BranchAndPeriodSelect": "Şube ve Dönem Seçimi",
+    "SalesInvoiceCards": "Satış Faturası Kartları"
   }
 }
